# mini_exercism

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  Cargo.toml.msrv  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  build.rs  codecov.yml  justfile  msrv-pins.toml  renovate.json  rustfmt.toml  tarpaulin.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit-check.yml  ci.yml  publish.yml  release.yml  waitaminute.yml
src/: api.rs  cli.rs  core.rs  lib.rs
src/api/: detail.rs  v1.rs  v2.rs  website.rs
src/api/v1/: ping.rs  solution.rs  track.rs
src/api/v2/: detail.rs  exercise.rs  exercises.rs  iteration.rs  solution.rs  solutions.rs  submission.rs  tests.rs  track.rs  tracks.rs  user.rs
src/api/v2/exercises/: detail.rs
src/api/v2/iteration/: detail.rs
src/api/v2/solutions/: detail.rs
src/api/v2/submission/: analysis.rs  files.rs
src/api/v2/tracks/: detail.rs
src/api/website/: detail.rs
src/cli/: detail.rs
src/cli/detail/: os.rs
src/cli/detail/os/: nix.rs  windows.rs
test_cli/: Cargo.toml
test_cli/src/: main.rs
tests/: api.rs  core.rs
tests/api_integration/: mod.rs  v1.rs  v2.rs  website.rs
tests/real_endpoints/: mod.rs  v1.rs  v2.rs
tests/v1/: mod.rs  ping.rs  solution.rs  track.rs
tests/v2/: exercise.rs  exercises.rs  iteration.rs  mod.rs  solution.rs  solutions.rs  submission.rs  track.rs  tracks.rs
tests/v2/submission/: analysis.rs  files.rs
tests/website/: mod.rs
