[package]
name = "mini_exercism"
version = "4.2.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.64.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/mini_exercism#readme"
repository = "https://github.com/clechasseur/mini_exercism"
documentation = "https://docs.rs/mini_exercism/"

description = "Minimalistic Rust library to interact with the Exercism.org APIs"

keywords = [ "api", "rest", "http", "exercism" ]
categories = [ "api-bindings", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)" ]

[features]
cli = []
cookies = ["reqwest/cookies"]

[dependencies]
bytes = "1.7.2"
derive_builder = "0.20.2"
futures = "0.3.31"
mockall_double = "0.3.1"
paste = "1.0.15"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.65"

[dev-dependencies]
anyhow = "1.0.89"
assert_matches = "1.5.0"
http = "1.1.0"
itertools = "0.13.0"
mockall = "0.13.0"
serial_test = { version = "3.1.1", features = ["file_locks"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6.2"
wiremock_logical_matchers = "0.6.0"

[build-dependencies]
rustc_version = "0.4.1"
