[package]
name = "mini_exercism"
version = "4.2.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.64.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/mini_exercism#readme"
repository = "https://github.com/clechasseur/mini_exercism"
documentation = "https://docs.rs/mini_exercism/"

description = "Minimalistic Rust library to interact with the Exercism.org APIs"

keywords = [ "api", "rest", "http", "exercism" ]
categories = [ "api-bindings", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "build.rs", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)" ]

[features]
cli = []
cookies = ["reqwest/cookies"]

[dependencies]
bytes = "1.10.1"
derive_builder = "0.20.2"
futures = "0.3.31"
mockall_double = "0.3.1"
paste = "1.0.15"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0.96"
assert_matches = "1.5.0"
itertools = "0.14.0"
mockall = "0.13.1"
serial_test = { version = "3.2.0", features = ["file_locks"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6.3"
wiremock_logical_matchers = "0.6.0"

[build-dependencies]
rustc_version = "0.4.1"
