[package]
name = "mini_exercism"
version = "7.0.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"
rust-version = "1.88.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/mini_exercism#readme"
repository = "https://github.com/clechasseur/mini_exercism"
documentation = "https://docs.rs/mini_exercism/"

description = "Minimalistic Rust library to interact with the Exercism.org APIs"

keywords = [ "api", "rest", "http", "exercism" ]
categories = [ "api-bindings", "asynchronous" ]

include = [ "src/**/*", "tests/**/*", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
all-features = true
targets = [ "x86_64-unknown-linux-gnu" ]
rustc-args = [ "--cfg", "docsrs" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(tarpaulin)",
    "cfg(tarpaulin_include)",
    "cfg(coverage)",
    "cfg(coverage_nightly)",
    "cfg(mini_exercism_enable_tests_with_real_endpoints)",
]

[features]
cli = []
cookies = ["reqwest/cookies"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
derive_builder = "0.20.2"
futures = "0.3.31"
mockall_double = "0.3.1"
paste = "1.0.15"
reessaie = "2.0.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
assert_matches = "1.5.0"
itertools = "0.14.0"
mockall = "0.13.1"
rstest = "0.26.1"
serial_test = { version = "3.2.0", features = ["file_locks"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6.5"
wiremock_logical_matchers = "0.6.1"
